X3 rework, vehicles and enemies done

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -79,9 +79,7 @@
 	
 	Furthermore, recognizing that certain concepts may require visual demonstration, a video folder accompanies this document. Inside, readers will find short video demonstrations complementing the explanations provided in the text
 	
-%TODO contorllo artwork dive a eventualemente aggiungereli
-%TODO METTERE REFERENZE A ATTACCHI NEMICI NELLE TABELLE DI DANNO
-%TODO METTERE EMPH NOMI MOSSE
+
 \part{Mega Man X}
 
 \label{cha:X1}
@@ -93,7 +91,7 @@
 	
 \part{Mega Man X3}
 \label{cha:X3}
-\input{src/x3.tex}
+%\input{src/x3.tex}
 \part{Characters}
 	\chapter*{Preface}
 	In this part more detailed information about characters who appear in the Mega Man X series are given. Here, however, information will not only come from in-game material but also from external (but still official) sources which expand and complete what is said within the games. Another difference between this part of the document and the previous ones is the fact that while in precedent chapters only facts were reported, leaving out any possible interpretation, here the objective is to try to put together all available data, even giving a plausible solution in case of conflicting elements. In any case it will be clarified whenever a solution is proposed, to let readers know what parts come from official sources and what instead are supposed solely for this document.
@@ -114,30 +112,30 @@
 \warningbox{\small{
 		\begin{itemize}	
 				\item After his death, Dr.~Light consciousness keeps living via an AI, which communicates with X through the capsules. This is due the fact that on multiple occasions Dr.~Light's hologram is fully aware of the circumstances and even directly answers posed questions.
-				\item The events of Bass' endings in both \textit{Mega Man: The Power Battle} and \textit{ Mega Man 2: The Power Fighters} are considered to be canon, as they do not contradict any other statement of other games and also provide a little more insight on Zero's origins.
+				\item The events of Bass' endings in both \textit{Mega Man: The Power Battle} and \textit{ Mega Man 2: The Power Fighters} are considered to happened, as they do not contradict any other statement from other games and also provide a little more insight on Zero's origins.
 				\item Just like Dr.~Light's consciousness manages to live on, Wily's too manages to survive death, although unclear how. However the presence of a figure very close of Wily's one which operates throughout the games heavily suggests that he managed to make his consciousness live on.
-				\item The canon ending for X2 is considered to be the one where Zero is rescued. This is due the presence, in the X5 opening, of a scene depicting Zero against his clone. Since this scene is supposed to be a summary of X and Zero's past battle, here that battle is considered to have happened.
+				\item The X2's ending is considered to be the one where Zero is rescued. This is due the presence, in the X5 opening, of a scene depicting Zero against his clone. Since this scene is supposed to be a summary of X and Zero's past battle, here that battle is considered to have happened.
 		\end{itemize}
 	}
 }
 
-%\input{src/character_X}
+\input{src/character_X}
 %\input{src/character_Zero}	
 %\input{src/character_Sigma_and_Vile}
 %\input{src/character_others}
 
 \appendix
 \chapter {Vehicles}
-\input{src/vehicles}
+%\input{src/vehicles}
 \chapter{Enemies}
-\input{src/enemies}
+%\input{src/enemies}
 
 
 \chapter{Timeline}
 %\input{src/timeline}
 
 \chapter{Damage Tables}
-\input{src/tables}
+%\input{src/tables}
 
 \bibliographystyle{IEEEtran} 
 \bibliography{bibliography}
