--- a/src/character_X.tex
+++ b/src/character_X.tex
@@ -6,7 +6,7 @@
 \end{figure}
 
 X is the main protagonist of the Mega Man series which bears his name. He is the last creation of the brilliant Dr.~Light, a robot built with the gift of free will and limitless potential and a Maverick Hunter, appointed to stop reploids gone maverick to hurt human people. 
-X's primary characteristic is his kind heart and peaceful attitude, which makes him repel violence, often trying to reason with his enemies. However despite this attitude X knows well the threat mavericks are and, even if unwilling, fight against them with all his strength to bring the world at peace.
+X's primary characteristic is his kind heart and peaceful attitude, which makes him repel violence, often trying to reason with his enemies. However, despite this attitude, X knows well the threat mavericks are and, even if unwilling, fight against them with all his strength to bring the world at peace.
 
 \section{Technical Specifications}
 X's specification can be found both in the opening scene of the first Mega Man X game and in the \emph{Rockman \& Rockman X Daizukan}~\cite{book:RRXD}-\cite{X_specs_translated} book. While some information overlap between these sources, others are exclusive to a single one, hence here both of them are reported as sources of information.
@@ -58,7 +58,7 @@ X's creation begins in the year 20XX by the hand of famous scientist Dr.~Thomas 
 It is unknown how long it took for Dr.~Light to complete X but, observing from the \emph{Day of $\Sigma$} OVA, it is possible to imagine that the development took most of Light's remaining lifetime as flashbacks show a doctor growing older and weaker as time passes.  During this time period however Light realizes the importance of his project and its impact it could have on the world due the power X holds, making him also realize the danger X could represent\footnote{\textit{``The name "X" also carries connotations of danger''}.} if, should the world turns against him, he takes a wrong path in life or begins to question the first law of robotics, risking disasters even worse than ones created in Wily's incidents~\cite{elysium_light_warning}. To avoid this situation, while still believing in X's good heart (as seen in X's flashback in \emph{Day of $\Sigma$}), Dr.~Light decides that X's moral integrity has to be tested deeply before letting him free. According to his studies, Dr.~Light estimates that about thirty years of testing should be necessary to completely ensure X's safety, time far beyond his own lifespan. For this reason, being near the end of his life and not having anyone who could continue his work, Dr.~Light creates a special capsule for X to rest in, capable of performing tests without the need of someone supervising it while also ensuring X's safety. After giving X farewell, on date 19$^{th}$ September 20XX, Dr.~Light proceeds to seal him away and leaves a message (written or recorded depending on the game) for whoever will find the capsule, explaining who X is and why he's special.
 
 \section{Awakening and birth of reploids}
-X's sleep last for about hundred years inside Dr.~Light's laboratory, buried underground and hidden from everything, until Dr.~Cain, a scientist of 21XX, while searching for plant fossils  from Mesozoic (or preserved plant from Middle Age~\cite{elysium_Cain_journal} in the Japanese version) accidentally finds the laboratory. After some digging he manages to get in, where he first finds Light's note and documentation relative to X and, the following day, X's capsule itself still working. After reading Light's last note and warning message, and checking the capsule status, which as stated in the journal show all indicators on green, on the 14$^{th}$ April 21XX Dr.~Cain awakes X from his slumber. Immediately after meeting him, Cain realizes how incredible and futuristic Light's creation is, even to his times, and decides to bring him, along all Light's design note, to his laboratory in order to try to replicate X's design and create a similar robot.
+X's sleep last for about hundred years inside Dr.~Light's laboratory, buried underground and hidden from everything. It is only in 21XX the Dr.~Cain, a scientist of that time, while searching for plant fossils  from Mesozoic (or preserved plant from Middle Age~\cite{elysium_Cain_journal} in the Japanese version) accidentally finds the hidden laboratory. After some digging, Dr.~Cain manages to get in, where he first finds Light's note and documentation relative to X and, the following day, X's capsule itself still working. After reading Light's last note and warning message and checking the capsule status, which as stated in the journal show all indicators on green, on the 14$^{th}$ April 21XX Dr.~Cain awakes X from his slumber. Immediately after meeting him, Cain realizes how incredible and futuristic Light's creation is, even to his times, and decides to bring him, along all Light's design notes, to his laboratory in order to try to replicate X's design and create a similar robot.
 
 More than six months were needed to complete the first robot, but on the 22$^{nd}$ November Dr.~Cain manages to create a robot using Light's schematics and X as reference. This new robot, just like X, is fully capable of making decisions on his own, even arriving to argue with Cain himself, to his surprise. However the new robot created isn't a perfect copy, as part of X's design couldn't be analyze even with modern technologies forcing Dr.~Cain to fix missing elements at his best, especially components constituting his ``\emph{Distress Circuit}''\cite{book:RMZ_Complete_works} which allows X to choose his side in society, and the new robot's moral integrity wasn't tested deeply as X's one. However since these differences seem to cause no problems, Dr.~Cain decided to start mass production of this new kind of revolutionary robot, which he named ``\emph{Reploids}''  (or \emph{Repliroids}).
 
