--- a/src/vehicles.tex
+++ b/src/vehicles.tex
@@ -19,7 +19,7 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 	\end{figure}
 	
 	\item \hypertarget{vehicle:Ride_Armor_Rabbit}{\textbf{Ride Armor EG-2 custom ``\textit{Rabbit}'':}}
-	Upgraded version of the original ride armor drove by Vile and X. It is  equipped with drill hands for mine excavation, and jets attached to its back for improved, although limited, flight ability~\cite{wayback:X2_resources}. 
+	Upgraded version of the original ride armor drove by X. It is  equipped with drill hands for mine excavation, and jets attached to its back for improved, although limited, flight ability~\cite{wayback:X2_resources}. 
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=\portraitsize]{figures/X2/Enemies/Ride_armor_RABBIT.png}
@@ -33,8 +33,8 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 %		\caption{Ride Armor Chimera}
 %	\end{figure}
 	
-	\item \hypertarget{vehicle:Ride_Armor_Frog}{\textbf{Ride Armor ``\textit{Frog}'':}} The first aquatic ride armor, Named because of its hopping movement, it is difficult to 
-	handle on the ground, but very easy in the water. It is armed with homing torpedo~\cite{wayback:X3_resources}.
+	\item \hypertarget{vehicle:Ride_Armor_Frog}{\textbf{Ride Armor ``\textit{Frog}'':}} The first aquatic ride armor, named due to its hopping movement. It is difficult to 
+	handle on the ground, but very manageable in the water. It is armed with homing torpedo~\cite{wayback:X3_resources}.
 %	\begin{figure}[htp]
 %		\centering
 %		\includegraphics[height=\portraitsize]{figures/X3/weapons/Frog.png}
@@ -70,7 +70,8 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=\portraitsize]{figures/X3/Doppler_stages/vile2_armor.png}
-		\caption{Ride Armor Golitath/Brown Bear and Vile}
+		\includegraphics[height=\portraitsize]{figures/X3/Doppler_stages/X_DiVE_Vile_MK2_on_Goliath.png}
+		\caption{Ride Armor Golitath/Brown Bear and Vile mk.II}
 	\end{figure}
 	
 	
