Update X and Zero bios

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\documentclass[openany,draft]{report}
+\documentclass[openany]{report}
 %\documentclass[a4paper]{book}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -27,6 +27,7 @@
 \newcommand{\mhx}{\textit{MHX}\xspace}
 \newcommand{\PtIIWarning}{Part \ref{assumptions} preface}
 \newcommand{\portraitsize}{4cm}
+\newcommand{\BIGportraitsize}{6cm}
 \hypersetup{
 	colorlinks=true,
 	linkcolor=blue,
@@ -115,13 +116,14 @@
 				\item The events of Bass' endings in both \textit{Mega Man: The Power Battle} and \textit{ Mega Man 2: The Power Fighters} are considered to happened, as they do not contradict any other statement from other games and also provide a little more insight on Zero's origins.
 				\item Just like Dr.~Light's consciousness manages to live on, Wily's too manages to survive death, although unclear how. However the presence of a figure very close of Wily's one which operates throughout the games heavily suggests that he managed to make his consciousness live on.
 				\item The X2's ending is considered to be the one where Zero is rescued. This is due the presence, in the X5 opening, of a scene depicting Zero against his clone. Since this scene is supposed to be a summary of X and Zero's past battle, here that battle is considered to have happened.
+				\item The final battle against X and Vile mk.II takes place within Doppler's laboratory (instead of Volt Kurageil).
 		\end{itemize}
 	}
 }
 
-\input{src/character_X}
+%\input{src/character_X}
 %\input{src/character_Zero}	
-%\input{src/character_Sigma_and_Vile}
+\input{src/character_Sigma_and_Vile}
 %\input{src/character_others}
 
 \appendix
