--- a/src/character_Sigma_and_Vile.tex
+++ b/src/character_Sigma_and_Vile.tex
@@ -1,8 +1,9 @@
 %Sigma + Vile.tex
 \chapter{Sigma}\label{char:Sigma}
-\begin{figure}[h]
+\begin{figure}[htp]
 	\centering
-	\includegraphics[width=0.4\linewidth]{figures/X1/Sigma_stages/MHXSigma.jpg}
+	\includegraphics[height=\BIGportraitsize]{figures/X1/Sigma_stages/X_DiVE_Sigma.png}
+	\caption{Sigma}
 \end{figure}
 Sigma is Dr.~Cain's greatest creation. Developed to be a strong leader to face the Maverick threat, Sigma is equipped with the latest design in terms of brain circuit, which according to Cain himself should be fault-safe and prevent him from going maverick. Sadly things don't go as Cain wished, as after solely two years of leading the Maverick Hunter Sigma not only goes maverick, but began a war against humanity bringing on his side a major part of Maverick Haunter which he led. To Sigma, in fact, humans are only an obstacle to reploids evolution, and should be eliminated to allow reploids to reach their full potential. 
 
@@ -18,15 +19,17 @@ into his fortress, waiting for his scheme to be completed. In truth, Sigma's pla
 Sigma returns again six months later, at the end of X2. During his absence the command of his forces were entrusted to the X-Hunters, which had their main goal in resurrecting Sigma again, building for him a new body. This is achieved thanks to Serges, the leader of the X-Hunters and a brilliant scientist. Alongside his resurrection, the three mavericks also work on other two schemes: increasing their army size, by the maverick virus throughout the word from the Central Computer and by building new mavericks, and resurrecting the deceased Zero as a maverick. It is not clear however if these two last objectives were posed by Sigma himself or were perpetrated by the X-Hunters autonomously. What is indeed sure is that at some point during this second revolution, Sigma must have received vital information about Zero's origins, since from this point onward alongside his obsession with X he will also develop an obsession for having Zero side with him. Sigma's plans however do not go as expected, since not only Zero does not side with him (depending on the choices made he will either never side with him or snap out of his control after a fight with X) but X  to defeat him again, even after Sigma managed to manifest his true, viral, form by using the Central Computer energy to manifest. Defeated again Sigma disappears, leaving behind words of warning for X, as he has resurrected once and will do it again until his victory. However in his last words Sigma can not hold for himself the regret for not understanding why Zero did not joined him: ``\textit{But, Zero, why…he’s…the last of…Wi…num…ers…}''~\cite{wordpress:X2_japanese_script}.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.4\linewidth]{figures/X2/Hunter_stages/Sigma_Virus.png}
+	\includegraphics[height=\portraitsize]{figures/X2/Hunter_stages/Sigma_Virus.png}
+	\caption{Sigma in his viral form}
 \end{figure}
 
 
 
 \chapter{Vile}\label{char:Vile}
-\begin{figure}[h]
+\begin{figure}[htp]
 	\centering
-	\includegraphics[width=0.3\linewidth]{figures/X1/Sigma_stages/MhxVile.png}	
+	\includegraphics[height=\BIGportraitsize]{figures/X1/Sigma_stages/X_DiVE_Vile.png}	
+	\caption{Vile}
 \end{figure}
 
 Although Vile does not play a major role in the X saga except for the first game, his status as recurring enemy in some games plus the presence of a dedicated game mode in the first game's remake, which better describe Vile's personality, are sufficient in order to dedicate this small chapter to him alone. 
