--- a/src/character_Zero.tex
+++ b/src/character_Zero.tex
@@ -2,9 +2,11 @@
 \chapter{Zero}\label{char:Zero}
 Zero is the deuteragonist of the X series. A close friend of X, Zero acts as a counterpart for him, opposing X's kindness and uncertainty with a cold and emotionless attitude, often taking action without hesitating. However, behind his attitude Zero hides a kind but wounded soul~\cite{wiki:Zero} which cares for his friends.
 
-\begin{figure}[h]
+\begin{figure}[htp]
 	\centering
-	\includegraphics[width=0.4\linewidth]{figures/Characters/Char_Z.png}
+	\includegraphics[height=\BIGportraitsize]{figures/Characters/Char_Z_2.png}	
+	\includegraphics[height=\portraitsize]{figures/Characters/Char_Z.png}
+	\caption{Zero (first and after X2).}
 \end{figure}
 
 \section{Creation}
@@ -15,9 +17,17 @@ Just like for X, precise information about Zero's creation or specifications are
 \end{quote}
 On such occasion, Wily also shows the blueprint of his project, a shadowy silhouette of Zero with his appearance from X2 onward.
 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[height=4cm]{figures/Characters/MM2TPF_Zero.png}
+	\caption{Zero's schematics during the Bass ending in Mega Man 2: The Power Fighters}
+\end{figure}
+
 ...
 
 \section{The X saga and the Maverick Wars}
 As Sigma go Maverick, Zero is appointed as leader of the Maverick Hunters, being the highest in rank remained within the group. He then proceeds to lead the organization against Sigma, entrusting X to deal with Sigma's subordinates while he tries to locate the enemy fortress. The two manage to complete their task simultaneously, and reunite to attack Sigma together, Zero acting as decoy due him being more powerful than X, to let him sneak inside unnoticed. Once in they briefly reunite but are interrupted by Vile which Zero  challenges to a duel, only to be caught in a trap Vile had previously prepared. Vile then proceeds to use him as a hostage and manages to capture X too, but Zero breaks free and, in order to save his friend, explodes to take down Vile too, but only manages to destroy his Ride armor. His action, however, gives X the strength necessary to break free and take Vile down definitively. With his last words Zero encourages X to proceed and face Sigma, firmly believing he has the power to beat him.
 
-Although destroyed, Zero's control circuit remains miraculously intact and is stored at the Maverick Hunters Headquarter. Zero's body (or what remains of it) is instead recovered by the X-Hunters, which tasks Serges to repair it. Serges not only repairs Zero's body, but also upgrades it into its final version, adding the missing shoulder pads and giving him his iconic Z-Saber. For the whole duration of the X-Hunters operation Zero remains incomplete, as the two key components stay in the hands of the two opposing factions. It is only near the end that Zero is resurrected, depending on the action X takes while fighting the X-Hunters. Zero can either be saved by X, who had previously won Zero's body parts from the X-Hunters, and be repaired by Dr.~Cain, or can be resurrected by Serges, after the X-Hunters steal the control circuit from the Maverick Hunters HQ. In the former case he reunites with X shortly before the final fight, just in time to destroy his clone, while in the latter case he will be put under Sigma's control and will fight X, which has to defeat him and make him come to his senses. Whichever the case is, Zero aids X during the final confrontation with Sigma, by destroying the main computer Sigma is using to spread his virus around the world.
+Although destroyed, Zero's control circuit remains miraculously intact and is stored at the Maverick Hunters Headquarter. Zero's body (or what remains of it) is instead recovered by the X-Hunters, which tasks Serges to repair it. Serges not only repairs Zero's body, but also upgrades it into its final version, adding the missing shoulder pads and giving him his iconic Z-Saber. For the whole duration of the X-Hunters operation Zero remains incomplete, as the two key components stay in the hands of the two opposing factions. It is only near the end that Zero is resurrected, depending on the action X takes while fighting the X-Hunters. Zero can either be saved by X, who had previously won Zero's body parts from the X-Hunters, and be repaired by Dr.~Cain, or can be resurrected by Serges, after the X-Hunters steal the control circuit from the Maverick Hunters HQ. In the former case he reunites with X shortly before the final fight, just in time to destroy his clone, while in the latter case he will be put under Sigma's control and will fight X, which has to defeat him and make him come to his senses. Whichever the case is, Zero aids X during the final confrontation with Sigma, by destroying the main computer Sigma is using to spread his virus around the world. Following his resurrection, Zero is reintegrated within the hunters ranks, although as leader of the 0th division, since X was promoted leader of the 17th in his place. 
+
+During the event also known as the ``Doppler Incident'', Zero is sent alongside X to dispose of Doppler's mavericks and secure the evil scientist to justice. However, they are initially forced to retreat, as Doppler's forces were attacking directly the maverick hunter's headquarter. In such occasion X is capture by former hunter Mac, but Zero manages to save him and kills the former hunter. After saving their base, X and Zero return to their mission in Doppler Town. There they manage to defeat all Doppler's mavericks, including the nightmare police and a revived Vile. Ultimately, after even Doppler has been taken down by X, the two split: X must face Sigma, the true mastermind behind all the situation, while Zero focuses on destroying the laboratory power generator. In one of the possible endings. Zero also manages to rescue X from being possessed by Sigma, first imbuing his sword with Doppler's antivirus and later by striking Sigma in his back, causing him to disappear.
