--- a/src/x1.tex
+++ b/src/x1.tex
@@ -1299,13 +1299,14 @@ Enemies present in the stage are following~\cite{wiki:sigma_stages}:
 \subsection{Vile}\label{boss:vile}
 \begin{figure}[htp]
 	\centering
-	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/Vile.jpg}
-	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/VileRideArmor.jpg}
-	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/MhxVile.png}
-	\caption{Vile's designs (~\cite{book:MMX_Complete_art})}
+	\includegraphics[height=3.9cm]{figures/X1/Sigma_stages/VileRideArmor.jpg}
+	\includegraphics[height=3.9cm]{figures/X1/Sigma_stages/Vile.jpg}
+	\includegraphics[height=3.9cm]{figures/X1/Sigma_stages/MhxVile.png}	
+	\includegraphics[height=3.9cm]{figures/X1/Sigma_stages/X_DiVE_Vile.png}
+	\caption{Vile's designs from~\cite{book:MMX_Complete_art} and the X Dive game (last)}
 \end{figure}
-Vile, known as \textit{Vava} in Japanese (refer to chapter~\ref{char:Vile}), ,was formerly an SA-ranked Maverick Hunter, occupying the same elite rank as Zero in the 17th Elite Unit under Sigma's command. However, due to a malfunction in his electronic brain, his mission to safeguard humans became twisted, changing into an obsessive urge to eradicate Mavericks at any cost, even if it resulted in collateral damage. Consequently, he was expelled from the Maverick Hunters and incarcerated on suspicion of being a Maverick himself. His time in confinement was brief, as Sigma's uprising commenced shortly after his capture, providing the perfect opportunity for his escape~\cite{Xcoll1:Manual_X1,MHX:manual, wayback:X_resources} (alternatively, as depicted in the \textit{Day of $\sigma$} OVA, Sigma himself orchestrated his release).
 
+Vile (refer to chapter~\ref{char:Vile}), known as \textit{Vava} in Japan, was formerly an SA-ranked Maverick Hunter, occupying the same elite rank as Zero in the 17th Elite Unit under Sigma's command. However, due to a malfunction in his electronic brain, his mission to safeguard humans became twisted, changing into an obsessive urge to eradicate Mavericks at any cost, even if it resulted in collateral damage. Consequently, he was expelled from the Maverick Hunters and incarcerated on suspicion of being a Maverick himself. His time in confinement was brief, as Sigma's uprising commenced shortly after his capture, providing the perfect opportunity for his escape~\cite{Xcoll1:Manual_X1,MHX:manual, wayback:X_resources} (alternatively, as depicted in the \textit{Day of $\sigma$} OVA, Sigma himself orchestrated his release).
 
 Vile's personality and roles in the \textit{Mega Man X} game and its remake exhibit notable differences. In the original game little is known about his motivations for joining Sigma. However, it's apparent that he holds a prominent position within Sigma's ranks, participating in the assault on the highway and subsequently serving as the primary line of defense in Sigma's hideout. Throughout these instances, Vile reveals himself as arrogant and aggressive, yet also cautious. Recognizing Zero's formidable prowess, Vile retreats during the highway attack and prepares a trap to capture Zero during their encounter at Sigma's hideout~\cite{wiki:Vile}. This treatment contrasts with his approach towards X, implying that Vile doesn't see him as a worthy adversary. In the remake, Vile retains similar characteristics but harbors an intense hate towards X from the very beginning, due to the high expectations everyone places upon him, which Vile instead struggles to comprehend. Therefore, in the remake, Vile's sole mission is to eliminate X by any means, with no allegiance to assisting Sigma, even arriving to assert that he will vanquish Sigma too and reshape the world himself\footnote{\enquote{You underestimated me. I hate that about you... X! There's nothing you can do! I'll defeat you and Sigma! Then I'll change the world}~\cite{wiki:MMX_script}} when playing as him in his own game mode.
 \begin{figure}[htp]
