--- a/src/character_X.tex
+++ b/src/character_X.tex
@@ -2,7 +2,8 @@
 \chapter{X}\label{char:X}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.6\linewidth]{figures/Characters/Char_MMX.png}
+	\includegraphics[height=\BIGportraitsize]{figures/Characters/Char_MMX.png}
+	\caption{X}
 \end{figure}
 
 X is the main protagonist of the Mega Man series which bears his name. He is the last creation of the brilliant Dr.~Light, a robot built with the gift of free will and limitless potential and a Maverick Hunter, appointed to stop reploids gone maverick to hurt human people. 
@@ -50,7 +51,7 @@ X's specification can be found both in the opening scene of the first Mega Man X
 
 
 \section{Creation}
-X's creation begins in the year 20XX by the hand of famous scientist Dr.~Thomas Light. Reasons that brought Dr.~Light are to be found into two main facts that happened during the scientist's life. The first one was the coming of an unknown computer virus from space that caused robots to go violent (which could be a reference both to the ``Evil energy'' appeared in \emph{Mega Man 8} or the \textit{Roboenza} Virus appeared in \emph{Mega Man 10}). After this event Dr.~Light decides that a new battle robot had to be created in order to protect the future of earth~\cite{mega_man_network:Zero_timeline}, and starts building X. On why creating X and not upgrading Rock, the original \textit{Mega Man}, many hypothesis can be formulated, one being the fact that Rock was originally designed to help with laboratory work and not to fight, hence the preference to create a new robot, instead altering Rock too much. In addition, since the new robot to be created may fight other robots infected with viruses, a new anti-virus system had to be created within him. This last statement fits perfectly with the second reason Dr.~Light began creating X, which is his dream to create a robot who could choose his own path in life, effectively having free will. How it is possible to see from his journal~\cite{Dr.Light_journal}, in fact, the idea of a free-will was born and stayed in him from shortly after events of the first \textit{Mega Man} game up until X's creation, as he believed it was his duty to accomplish such achievement\footnote{\textit{If a robot posses the intelligence to be conscious of the possibility of opposing a human for the right reasons, will it be possible for them to worry aver what path is right? [...] I can sincerely feel that coming to think of this is my duty.} Dr.~Light's journal, 29 March 2017}. Furthermore as Roll pointed to Light, free will also create the perfect anti-virus system, as would made impossible for a robot to be manipulated\footnote{\textit{``If artificial intelligence can be aware of its own intelligence, then one can fix any kind of tampering'' [...] However if that very kind of electronic intelligence can realize ideas like hers} (Roll) \textit{, then I think it's possible to establish a consciousness that cannot be manipulated} Dr.~Light's journal, 7 March 2017}. 
+X's creation begins in the year 20XX by the hand of famous scientist Dr.~Thomas Light. Reasons that brought Dr.~Light are to be found into two main facts that happened during the scientist's life. The first one was the coming of an unknown computer virus from space that caused robots to go violent (which could be a reference both to the ``Evil energy'' appeared in \emph{Mega Man 8} or the \textit{Roboenza} Virus appeared in \emph{Mega Man 10}). After this event, Dr.~Light decides that a new battle robot had to be created in order to protect the future of earth~\cite{mega_man_network:Zero_timeline}, and starts building X. On why creating X and not upgrading Rock, the original \textit{Mega Man}, many hypothesis can be formulated, one being the fact that Rock was originally designed to help with laboratory work and not to fight, hence the preference to create a new robot, instead altering Rock too much. In addition, since the new robot to be created may fight other robots infected with viruses, a new anti-virus system had to be integrated within him. This last statement fits perfectly with the second reason Dr.~Light began creating X, which is his dream to create a robot who could choose his own path in life, effectively having free will. How it is possible to see from his journal~\cite{Dr.Light_journal}, in fact, the idea of a free-will was born and stayed in him from shortly after events of the first \textit{Mega Man} game up until X's creation, as he believed it was his duty to accomplish such achievement\footnote{\textit{If a robot posses the intelligence to be conscious of the possibility of opposing a human for the right reasons, will it be possible for them to worry aver what path is right? [...] I can sincerely feel that coming to think of this is my duty.} Dr.~Light's journal, 29 March 2017}. Furthermore as Roll pointed to Light, free will also create the perfect anti-virus system, as would made impossible for a robot to be manipulated\footnote{\textit{``If artificial intelligence can be aware of its own intelligence, then one can fix any kind of tampering'' [...] However if that very kind of electronic intelligence can realize ideas like hers} (Roll) \textit{, then I think it's possible to establish a consciousness that cannot be manipulated} Dr.~Light's journal, 7 March 2017}. 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/Characters/Char_X_build.jpg}
@@ -58,7 +59,7 @@ X's creation begins in the year 20XX by the hand of famous scientist Dr.~Thomas 
 It is unknown how long it took for Dr.~Light to complete X but, observing from the \emph{Day of $\Sigma$} OVA, it is possible to imagine that the development took most of Light's remaining lifetime as flashbacks show a doctor growing older and weaker as time passes.  During this time period however Light realizes the importance of his project and its impact it could have on the world due the power X holds, making him also realize the danger X could represent\footnote{\textit{``The name "X" also carries connotations of danger''}.} if, should the world turns against him, he takes a wrong path in life or begins to question the first law of robotics, risking disasters even worse than ones created in Wily's incidents~\cite{elysium_light_warning}. To avoid this situation, while still believing in X's good heart (as seen in X's flashback in \emph{Day of $\Sigma$}), Dr.~Light decides that X's moral integrity has to be tested deeply before letting him free. According to his studies, Dr.~Light estimates that about thirty years of testing should be necessary to completely ensure X's safety, time far beyond his own lifespan. For this reason, being near the end of his life and not having anyone who could continue his work, Dr.~Light creates a special capsule for X to rest in, capable of performing tests without the need of someone supervising it while also ensuring X's safety. After giving X farewell, on date 19$^{th}$ September 20XX, Dr.~Light proceeds to seal him away and leaves a message (written or recorded depending on the game) for whoever will find the capsule, explaining who X is and why he's special.
 
 \section{Awakening and birth of reploids}
-X's sleep last for about hundred years inside Dr.~Light's laboratory, buried underground and hidden from everything. It is only in 21XX the Dr.~Cain, a scientist of that time, while searching for plant fossils  from Mesozoic (or preserved plant from Middle Age~\cite{elysium_Cain_journal} in the Japanese version) accidentally finds the hidden laboratory. After some digging, Dr.~Cain manages to get in, where he first finds Light's note and documentation relative to X and, the following day, X's capsule itself still working. After reading Light's last note and warning message and checking the capsule status, which as stated in the journal show all indicators on green, on the 14$^{th}$ April 21XX Dr.~Cain awakes X from his slumber. Immediately after meeting him, Cain realizes how incredible and futuristic Light's creation is, even to his times, and decides to bring him, along all Light's design notes, to his laboratory in order to try to replicate X's design and create a similar robot.
+X's sleep last for about hundred years inside Dr.~Light's laboratory, buried underground and hidden from everything. It is only in the 21XX that Dr.~Cain, a scientist of that time, while searching for plant fossils  from the Mesozoic era (or preserved plant from Middle Age~\cite{elysium_Cain_journal} in the Japanese version) accidentally finds the hidden laboratory. After some digging, Dr.~Cain manages to get in, where he first finds Light's note and documentation relative to X and, the following day, X's capsule itself still working. After reading Light's last note and warning message and checking the capsule status, which as stated in the journal shows all indicators on green, on the 14$^{th}$ April 21XX Dr.~Cain awakes X from his slumber. Immediately after meeting him, Cain realizes how incredible and futuristic Light's creation is, even to his times, and decides to bring him, along all Light's design notes, to his laboratory in order to try to replicate X's design and create a similar robot.
 
 More than six months were needed to complete the first robot, but on the 22$^{nd}$ November Dr.~Cain manages to create a robot using Light's schematics and X as reference. This new robot, just like X, is fully capable of making decisions on his own, even arriving to argue with Cain himself, to his surprise. However the new robot created isn't a perfect copy, as part of X's design couldn't be analyze even with modern technologies forcing Dr.~Cain to fix missing elements at his best, especially components constituting his ``\emph{Distress Circuit}''\cite{book:RMZ_Complete_works} which allows X to choose his side in society, and the new robot's moral integrity wasn't tested deeply as X's one. However since these differences seem to cause no problems, Dr.~Cain decided to start mass production of this new kind of revolutionary robot, which he named ``\emph{Reploids}''  (or \emph{Repliroids}).
 
@@ -66,7 +67,7 @@ It took not so long for reploids to integrate inside the society as Dr.~Cain him
 
 \section{Mavericks and Maverick Hunters}
 
-In the following entry in Cain's journal dated 16 July the scientist states: ``\textit{Three reploids went "maverick" today and injured two people before they were stopped. This is the third instance of this type of behavior and I still have no idea of what is causing it!}''. This entry describes the first mavericks occurrence in the series although, at the time the entry is written, they look more like isolated events related to some sort of explainable fault. However due the problem mavericks had caused, even with such a small number of occurrences (only three), the journal describes how the idea of halting the production already began to spread, but considering how society now depends on reploids, this idea is discarded from becoming reality. Instead a special organization called ``Hunters'' is  established in order to track down and halt mavericks before they cause any damage. Appointed leader of the organization is Sigma, Cain's latest and finest work equipped with last-design circuit which should prevent him from any fault Sigma also serves as leader of the 17th elite unit, operating on front lines against the maverick threat. X will join the organization only later in time (see \PtIIWarning), where will be assigned to the 17th unit under Sigma and where he will meet his future partner, Zero. 
+In the following entry in Cain's journal dated 16th July the scientist states: ``\textit{Three reploids went "maverick" today and injured two people before they were stopped. This is the third instance of this type of behavior and I still have no idea of what is causing it!}''. This entry describes the first mavericks occurrence in the series although, at the time the entry is written, they look more like isolated events related to some sort of explainable fault. However due the problem mavericks had caused, even with such a small number of occurrences (only three), the journal describes how the idea of halting the production already began to spread, but considering how society now depends on reploids, this idea is discarded from becoming reality. Instead a special organization called ``Hunters'' is  established in order to track down and halt mavericks before they cause any damage. Appointed leader of the organization is Sigma, Cain's latest and finest work equipped with last-design circuit which should prevent him from any fault Sigma also serves as leader of the 17th elite unit, operating on front lines against the maverick threat. X will join the organization only later in time (see \PtIIWarning), where will be assigned to the 17th unit under Sigma and where he will meet his future partner, Zero. 
 
 Thanks to hunters' effort any further injure occurred as consequence of maverick attack, creating a situation of peace that lasted  for almost two years (two month in the English, see \PtIIWarning) During this period X fights together with his commander Sigma, his partner Zero and all his companions against mavericks, but deep inside he keeps questioning about his place in life and the path he has to choose\footnote{``\textit{I am a little worried about X. He seems unsure of his place in life and what Dr. Light had planned for him}'' Journal of Dr.~Cain, 10$^{th}$ December 21XX}.
 
@@ -82,11 +83,13 @@ After the rebellion's beginning, the few hunters remained loyal to their origina
 
 From now on X's story follows the game's plot. During the event of the first game (and its remake) Zero is appointed as leader of the Maverick Hunters, being the highest in rank still on the right side, and leads other hunters, X included, in fighting. Zero then asks  X to take care of Sigma's subordinate both because their actions are causing trouble to humans and other reploids, but most importantly to allow X to grow up and become stronger, as Sigma is still too powerful for him. Once X disposes of the eight mavericks, Zero contacts him to ask help to infiltrate Sigma's fortress, which he managed to locate in the meanwhile. Once inside the two first challenge Vile, which results in his death but in Zero's death too. Finally X faces Sigma and defeats him, halting his plans of human extinction. After escaping Sigma's collapsing fortress, X returns to the Maverick Hunter headquarters, where he becomes the new leader in charge, under Dr.~Cain's direction.
 
-Despite Sigma's defeat, however, Maverick attacks against humanity do not stop. This lead to more fights between mavericks and Mavericks Hunters for six more months, which results in heavy losses for both parts, reducing the number of effective Hunters to a quarter of its original number and also in the loss. Despite that, however, mavericks' numbers do not suffer the same loss, rising instead. This is caused by special factories which mavericks had previously altered to implant maverick chips into new reploids. After some searching Dr.~Cain manages to find the culprit factory, and X and the Maverick Hunters are dispatched to destroy it. Once arrived, X destroys the factory alongside the army of giant mechaniloid CF-0 which was produced. With this action X and the Hunters deal a heavy blow to mavericks forces, forcing the new leaders, the X-Hunters, to change their plans for the future and release their highest-ranked mavericks in order to buy them more time to complete their schemes. This plan too reveals to be a failure, since X manages to defeat his opponents much faster than expected, forcing the X-Hunters themselves to come out and face X, using the Zero's part they have repaired to lure X into fighting them. Despite this distraction, X manages to defeat all remaining high-ranked mavericks and proceeds to attack the X-Hunters fortress. 
+Despite Sigma's defeat, however, Maverick attacks against humanity do not stop. This lead to more fights between mavericks and Mavericks Hunters for six more months, which results in heavy losses for both parts, reducing the number of effective Hunters to a quarter of its original number and also in the loss. Nerveless, mavericks' numbers do not suffer the same loss, rising instead. This is caused by special factories which mavericks had previously altered to implant maverick chips into new reploids. After some searching Dr.~Cain manages to find the culprit factory, and X and the Maverick Hunters are dispatched to destroy it. Once arrived, X destroys the factory alongside the army of giant mechaniloid CF-0 which was produced. With this action X and the Hunters deal a heavy blow to mavericks forces, forcing the new leaders, the X-Hunters, to change their plans for the future and release their highest-ranked mavericks in order to buy them more time to complete their schemes. This plan too reveals to be a failure, since X manages to defeat his opponents much faster than expected, forcing the X-Hunters themselves to come out and face X, using the Zero's part they have repaired to lure X into fighting them. Despite this distraction, X manages to defeat all remaining high-ranked mavericks and proceeds to attack the X-Hunters fortress. 
 
 At this point the story branches into two paths, both of which can be considered canonical. On one route X defeats all the X-Hunters and recovers all Zero's parts. Dr.~Cain then locates X-Hunters' secret base and proceeds to repair  Zero while X begins to attack the fortress. There X destroys all the three X-Hunters and discovers that Sigma is still alive, and waiting for him at the Central Computer. Once arrived, Sigma greets X and presents him a black clone of Zero, created by Serges, which he intends to use to destroy X. However the real Zero appears, destroys his clone and forces Sigma to retreat. Zero then opens a path for X to chase Sigma, and heads to destroy the main computer. Finally X faces Sigma, who in the fight reveals his true form as a Virus capable of manifesting into the real world, and defeats him again.
 
 In the alternate route X fails to recover all Zero's parts. Here the X-Hunters attack Maverick Hunters HQ and steal all Zero's parts, control circuit included, and use them to revive Zero. From this point the narration follows the story described earlier except for the final part, where Sigma presents himself alongside the real Zero, now under Sigma's control. X and Zero fight, but the former manages to win, bringing Zero back to his senses. The plot then converges again into the same ending.
 
+With Sigma gone for a second time, the world seems to enter a period of peace. In this period, scientists keep studying the causes of the maverick behavior, until one of them, a reploid named Dr.~Doppler, manages to identify the cause in a computer virus he decides to name ``Sigma Virus''. Using his skills and intellect, Doppler manages to develop a solution to stop maverick occurrences, leading the world to a new era of peace. Due to his actions, people and reploids gather around their savior, thus founding Doppler Town. Peace, however, is short-lived, as only few month after Doppler's Town completion maverick who were supposed to be cured begin to riot again and alongside them is Doppler, who declares war on humanity once more. Once more called to their duty, X and Zero are dispatched to Doppler Town, in an attempt to stop the maverick and capture Doppler, but the scientists anticipate them, sending his troops to strike directly the maverick hunters headquarter. X and Zero are therefore forced to retreat and defend their base. In such instance, X is captured by Mac, a former hunter and a traitor, but is later rescued by Zero. The couple then proceed to take down the remaining of Doppler's forces, before returning to their original mission in Doppler Town. There, the two proceed to stop the maverick who were threatening the population, and also the nightmare police and a revived Vile, both dispatched to hunt down X and Zero.
 
+Finally, X manages to reach Doppler and faces him. Initially Doppler tries to lure X to his side, but when the negotiation fails, the two clash. X emerges victorious, managing to free Doppler from the virus which was controlling him. X learns, in fact, that all Doppler's action where caused by him falling to the Sigma Virus, that forced him top wage war and also build another body for Sigma to use. Having learned where Sigma is hiding, X proceeds to face the villain once more. X and Sigma fight, but ultimately is X to win, destroying the battle body Doppler made for Sigma. In a last attempt to claim victory, Sigma returns to his viral form and tries to possess X directly, who is forced to flee. Ultimately, however, X ends up in a corner without escape, and is only thanks to the intervention of Zero/Doppler, who disperse Sigma, that he manages to flee.
 
